force-app/main/default/objects/Asset/fields/BDL_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>BDL_Additional_Information__c</fullName>
    <description>Rich Text field for additional information regarding assets during evaluation phase.
Demen S. 9th March 2023.</description>
    <label>Additional Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>