force-app/main/default/objects/Asset/fields/BDL_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>BDL_Brand_Name__c</fullName>
    <description>Helps to record brand names for assets.
Demen S. 9th March 2023.</description>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>