force-app/main/default/objects/Asset/fields/BDL_Phase__c.field-meta.xml
<CustomField>
    <fullName>BDL_Phase__c</fullName>
    <description>This picklist utilizes the &quot;Asset Phase&quot; global value set and comes with pre-defined phased from cortellis. Values can be added via the global value set.
Demen S. 9th March 2023.</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetName>BDL_Asset_Phase</valueSetName>
    </valueSet>
</CustomField>