force-app/main/default/objects/Asset/fields/BDL_Reason_for_In_Out_Licensing__c.field-meta.xml
<CustomField>
    <fullName>BDL_Reason_for_In_Out_Licensing__c</fullName>
    <description>This Rich Text field can be used to list reasons for in- or out-licensing deals. Keeping this in one field will make reporting easier.
Demen S. 9th March 2023.</description>
    <label>Reason for In/Out-Licensing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>