force-app/main/default/objects/Asset/fields/BDL_Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>BDL_Therapeutic_Area__c</fullName>
    <description>List of Therapeutic Areas utilizing the Global Value Set &quot;Therapeutic Area&quot;.
Demen S. 9th March 2023.</description>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Therapeutic_Area</valueSetName>
    </valueSet>
</CustomField>