force-app/main/default/objects/Asset/recordTypes/BDL_In_Licensing.recordType-meta.xml
<RecordType>
    <fullName>BDL_In_Licensing</fullName>
    <active>true</active>
    <label>In-Licensing</label>
</RecordType>