force-app/main/default/objects/Asset/recordTypes/BDL_Out_Licensing.recordType-meta.xml
<RecordType>
    <fullName>BDL_Out_Licensing</fullName>
    <active>true</active>
    <label>Out-Licensing</label>
</RecordType>