force-app/main/default/objects/Asset/listViews/BDL_All_BDL_Assets.listView-meta.xml
<ListView>
    <fullName>BDL_All_BDL_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All BDL Assets</label>
    <sharedTo>
        <group>BDL_BDL_All_Users</group>
    </sharedTo>
</ListView>